# test-ciwheels

./: .gitmodules  CMakeLists.txt  README.md  build_local.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  test_py36.yml
cpp_src/: vsag.cpp  vsag.h
python/: __init__.py  mkl_wrapper.cpp  pyproject.toml  setup.cfg  setup.py
python/pyvsag/: __init__.py
src/: hello.c  main.cpp  mkl_ops.cpp  mkl_ops.h
src/ciwheels_example/: __init__.py
src/my_package/: CMakeLists.txt  __init__.py  add.cpp
src/pyvsag/: __init__.py
src/pyvsag/cpp_src/: CMakeLists.txt  main.cpp
tests/: test_mkl_ops.py  test_pyvsag.py
