# setup.cfg
[metadata]
# !! AI 脚手架应提示用户修改以下信息 !!
name = pyvsag
version = 0.0.1
author = 你的名字
author_email = your.email@example.com
description = 一个使用 CMake 和 Pybind11 打包 C++ 扩展的示例项目
license_files = LICENSE
# 声明支持的 Python 版本
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
# 自动发现 src 目录下的所有包
packages = find:
# 指定源码在 src 目录下
package_dir = = src
# 声明项目运行所需的最低 Python 版本
python_requires = >=3.6
# C++ 扩展通常不是 zip 安全的
zip_safe = false
# 在这里添加项目运行时的 Python 依赖，例如:
# install_requires =
#     numpy>=1.14.5
