# python/pyproject.toml
[build-system]
requires = ["scikit-build-core<0.8", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pyvsag-cmake-example"
version = "0.1.0" # 在这个例子中我们使用静态版本
description = "一个使用CMake和pybind11构建的Python C++扩展"
readme = "../README.md" # 相对于此文件的路径
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.scikit-build]
# 告诉scikit-build-core，CMakeLists.txt在父目录中
cmake.source-dir = "../"

# 定义wheel包中应包含的Python包
wheel.packages = ["pyvsag"]
