[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvsag"
description = "Minimal test package"
authors = [{name = "Test", email = "test@example.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "python/pyvsag/_version.py"
root = ".."
